--- a/doc_report/EARoot/EA1/EA2/EA1/EA26.htm
+++ b/doc_report/EARoot/EA1/EA2/EA1/EA26.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">10/07/2015 22:16:58</td>
+			<td class="ObjectDetailsValue">29/07/2015 09:16:43</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,8 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA23.htm">Actors</a>, <a href="../../../EA2/EA1/EA1/EA1/EA3/EA95.htm">Enquête</a>, <a href="../../../EA2/EA1/EA1/EA1/EA2/EA86.htm">Consultation des évaluations</a></td>
 		</tr>
 	</table>
-	
+	<div class="ObjectDetailsNotes">Acteur regroupant les enseignants et les gestionnaires pédagogiques.&lt;p/&gt;</div>
+
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
 			<li onClick="parent.toggleItem('AssociationsTo');" id="AssociationsToTitle">Associations To</li>
