--- a/doc_report/glossary.htm
+++ b/doc_report/glossary.htm
@@ -39,6 +39,10 @@ function nameClassifier(name, separator)
 			<td width="76%" class="TableHeading">Meaning</td>
 		</tr>
 						<tr valign="top">
+				<td width="16%" class="TableRow">Avis pédagogique</td>
+				<td width="8%" class="TableRow">Synonyme</td>
+				<td width="76%" class="TableRow">Évaluation pédagogique</td>
+			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">Calendrier de campagne</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
 				<td width="76%" class="TableRow">&nbsp;</td>
@@ -55,17 +59,29 @@ function nameClassifier(name, separator)
 				<td width="8%" class="TableRow">Vocabulary</td>
 				<td width="76%" class="TableRow">&nbsp;</td>
 			</tr>			<tr valign="top">
+				<td width="16%" class="TableRow">CoCoPé</td>
+				<td width="8%" class="TableRow">Acronyme</td>
+				<td width="76%" class="TableRow">Conférence des commissions pédagogiques</td>
+			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">Commission pédagogique facultaire</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
 				<td width="76%" class="TableRow">&nbsp;</td>
 			</tr>			<tr valign="top">
-				<td width="16%" class="TableRow">Conseil des commissions pédagogiques</td>
+				<td width="16%" class="TableRow">Conférence des commissions pédagogiques</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
 				<td width="76%" class="TableRow">&nbsp;</td>
+			</tr>			<tr valign="top">
+				<td width="16%" class="TableRow">CoPéF</td>
+				<td width="8%" class="TableRow">Acronyme</td>
+				<td width="76%" class="TableRow">Commission Pédagogique Facultaire</td>
 			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">Département de support aux activités académiques</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
 				<td width="76%" class="TableRow">&nbsp;</td>
+			</tr>			<tr valign="top">
+				<td width="16%" class="TableRow">Dispositif</td>
+				<td width="8%" class="TableRow">Vocabulary</td>
+				<td width="76%" class="TableRow">Moyens mis en place pour dispenser un enseignement.</td>
 			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">Doyen</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
@@ -77,15 +93,31 @@ function nameClassifier(name, separator)
 			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">Enquête</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
-				<td width="76%" class="TableRow">&nbsp;</td>
+				<td width="76%" class="TableRow">Processus regroupant la prise d'avis et le traitement des résultats des questionnaires.</td>
 			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">Enseignant</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
 				<td width="76%" class="TableRow">Dispense des cours dans le cadre d'une unité d'enseignement.</td>
 			</tr>			<tr valign="top">
+				<td width="16%" class="TableRow">Entité pédagogique</td>
+				<td width="8%" class="TableRow">Vocabulary</td>
+				<td width="76%" class="TableRow">Entité évaluée lors d'une campagne d'évaluation des enseignements (UE ou couple UE/enseignant)</td>
+			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">Étudiant</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
 				<td width="76%" class="TableRow">&nbsp;</td>
+			</tr>			<tr valign="top">
+				<td width="16%" class="TableRow">Évaluation pédagogique</td>
+				<td width="8%" class="TableRow">Vocabulary</td>
+				<td width="76%" class="TableRow">Appréciation et commentaire émis par un membre de la commission pédagogique facultaire ou la commission elle-même sur base des résultats des questionnaires d'évaluation.</td>
+			</tr>			<tr valign="top">
+				<td width="16%" class="TableRow">faculté</td>
+				<td width="8%" class="TableRow">Vocabulary</td>
+				<td width="76%" class="TableRow">&nbsp;</td>
+			</tr>			<tr valign="top">
+				<td width="16%" class="TableRow">Fonction programmée</td>
+				<td width="8%" class="TableRow">Vocabulary</td>
+				<td width="76%" class="TableRow">Un fonction programmée est une fonction implémentée par un informaticien et intégrée dans l'application en tant que fonctionnalité pouvant servir comme formule. Elle peut accepter un ensemble de paramètres, mais n'est modifiable que par le développeur.</td>
 			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">Gestionnaire de campagne</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
@@ -99,9 +131,25 @@ function nameClassifier(name, separator)
 				<td width="8%" class="TableRow">Vocabulary</td>
 				<td width="76%" class="TableRow">&nbsp;</td>
 			</tr>			<tr valign="top">
+				<td width="16%" class="TableRow">Mention</td>
+				<td width="8%" class="TableRow">Vocabulary</td>
+				<td width="76%" class="TableRow">Indicateur spécifique à une question.</td>
+			</tr>			<tr valign="top">
+				<td width="16%" class="TableRow">Participant de l'enquête</td>
+				<td width="8%" class="TableRow">Vocabulary</td>
+				<td width="76%" class="TableRow">Utilisateurs de l'application répondant aux questionnaires.
+</td>
+			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">Période</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
-				<td width="76%" class="TableRow">Intervalle de temps ayant une date et une heure de début et de fin.</td>
+				<td width="76%" class="TableRow">Intervalle de temps ayant une date et une heure de début et de fin.
+
+Une période peut aussi être associée à une unité d'enseignement :
+<ul>
+	<li>Période 1 : UE dispensée toute l'année.</li>
+	<li>Période 2 : UE dispensée au premier quadrimestre.</li>
+	<li>Période 3 : UE dispensée au second quadrimestre.</li>
+</ul></td>
 			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">PIC</td>
 				<td width="8%" class="TableRow">Acronyme</td>
@@ -133,11 +181,21 @@ function nameClassifier(name, separator)
 			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">Titulaire</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
-				<td width="76%" class="TableRow">Un enseignant est titulaire d'une unité d'enseignant s'il en est l'enseignant principal. Ce statut lui donne accès aux évaluations des enseignants non-titulaires pour les unités d'enseignement qu'ils ont en commun.</td>
+				<td width="76%" class="TableRow">Un enseignant est titulaire d'une unité d'enseignant s'il en est l'enseignant principal. Ce statut lui donne accès aux évaluations des enseignants non-titulaires pour les unités d'enseignement qu'ils ont en commun.
+Un titulaire est réputé responsable de son dispositif d'enseignement.</td>
+			</tr>			<tr valign="top">
+				<td width="16%" class="TableRow">UE</td>
+				<td width="8%" class="TableRow">Acronyme</td>
+				<td width="76%" class="TableRow">Unité d'enseignement</td>
 			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">Unité d'enseignement</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
 				<td width="76%" class="TableRow">&nbsp;</td>
+			</tr>			<tr valign="top">
+				<td width="16%" class="TableRow">Valves</td>
+				<td width="8%" class="TableRow">Vocabulary</td>
+				<td width="76%" class="TableRow">Espace réserver à la publication d'informations.
+Des valves peuvent être physique ou virtuelles.</td>
 			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">Vice-recteur en charge de l'enseignement</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
