--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA69.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA69.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">28/07/2015 10:17:04</td>
+			<td class="ObjectDetailsValue">5/08/2015 09:38:22</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA65.htm">Administration</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Attribuer les droits d&#39;accès permet au superviseur d&#39;assigner les droits d&#39;accès adéquats à l&#39;ensemble des rôles intervenant dans l&#39;application.&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;Gestion des rôles et des utilisateurs.&lt;br/&gt;&lt;br/&gt;Connexions utilisent le système de l&#39;université (netid). Fourni par le centre de calcul.&lt;br/&gt;&lt;br/&gt;Gestion des ressources.&lt;br/&gt;&lt;br/&gt;Prof externes (pas de compte ULB) =#gt; adjonction d&#39;un système d&#39;authentification local.&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">Attribuer les droits d&#39;accès permet au superviseur d&#39;assigner les droits d&#39;accès adéquats à l&#39;ensemble des rôles intervenant dans l&#39;application, ainsi que gérer les rôles et les utilisateurs.&lt;br/&gt;&lt;br/&gt;Les droits d&#39;accès permettent de déterminer à quelles fonctionnalités l&#39;utilisateur a accès après s&#39;être connecté.&lt;br/&gt;La connexion se base sur le netid de l&#39;utilisateur fourni par le centre de calcul, ou, si l&#39;utilisateur n&#39;a pas de netid, en utilisant un système d&#39;auhtentification local.&lt;br/&gt;&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
