--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA86.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA86.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">28/07/2015 09:24:58</td>
+			<td class="ObjectDetailsValue">5/08/2015 17:08:09</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,12 +94,16 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA65.htm">Administration</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">La gestion des textes est le processus par lequel le superviseur prépare le contenu des modèles. Le gestionnaire de communication utilisera ces textes pour ses messages, les adaptant si nécessaire.&lt;br/&gt;&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">La gestion des textes est le processus par lequel le superviseur prépare le contenu des modèles. Le gestionnaire de communication utilisera ces textes pour ses messages, les adaptant si nécessaire.&lt;br/&gt;Certains modèles de texte sont personnalisable, tandis que d&#39;autres sont figés.&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
+			<li onClick="parent.toggleItem('LinkedDocument');" id="LinkedDocumentTitle">Linked Document</li>
 			<li onClick="parent.toggleItem('Links');" id="LinksTitle">Other Links</li>
 		</ul>
+		<div class="ItemBody" id="LinkedDocumentTable">
+			<iframe src="../../../../../../linkdocs/EAID_CCCF4FFC_9D7E_4b8f_9DF0_B48A0AEB7228.htm" frameborder="0" id="linkDocIFrame"></iframe>
+		</div>
 		<div class="ItemBody" id="LinksTable">
 			<table align="center" border="0" cellspacing="0" cellpadding="0" class="Table">
 				<tr>
