--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA100.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA100.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">31/07/2015 11:41:16</td>
+			<td class="ObjectDetailsValue">4/08/2015 13:53:24</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="../EA3/EA101.htm">Enquête</a>, <a href="EA91.htm">Consultation des évaluations</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Établir un avis de circonstance revient à évaluer individuellement un enseignant.&lt;br/&gt;Cette évaluation est prise en charge par la commission d&#39;évaluation pédagogique facultaire à la demande du doyen.&lt;br/&gt;Un avis de circonstance reprend les appréciations ainsi que les commentaires circonstanciés, l&#39;ensemble basé sur les évaluations périodiques des cinq dernières années.&lt;br/&gt;&lt;br/&gt;Les appréciations portent sur les dimensions suivantes (cf. &lt;a href=&quot;javascript:top.guidLink(&#39;{69D0A959-7820-4e8c-97D5-086C80178E35}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;règlement cadre&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; article 10) :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;conception des enseignements ;&lt;/li&gt;&lt;li&gt;déroulement des enseignements ;&lt;/li&gt;&lt;li&gt;évaluation des apprentissages ;&lt;/li&gt;&lt;li&gt;prestation individuelle ;&lt;/li&gt;&lt;li&gt;appréciation globale ;&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;dont le qualificatif est l&#39;un des suivants :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;particulièrement favorable ;&lt;/li&gt;&lt;li&gt;favorable ;&lt;/li&gt;&lt;li&gt;défavorable ;&lt;/li&gt;&lt;li&gt;sans objet.&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Le président de la commission est chargé de le remettre à la commission spéciale dont les compétences sont fixées dans l&#39;article 71 des statuts organiques.&lt;br/&gt;&lt;br/&gt;--&lt;br/&gt;&lt;br/&gt;&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">Établir un avis de circonstance revient à évaluer individuellement un enseignant.&lt;br/&gt;Cette évaluation est prise en charge par la commission d&#39;évaluation pédagogique facultaire à la demande du doyen.&lt;br/&gt;Un avis de circonstance reprend les appréciations ainsi que les commentaires circonstanciés, l&#39;ensemble basé sur les évaluations périodiques des cinq dernières années.&lt;br/&gt;&lt;br/&gt;Les appréciations portent sur les dimensions suivantes (cf. &lt;a href=&quot;javascript:top.guidLink(&#39;{69D0A959-7820-4e8c-97D5-086C80178E35}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;règlement cadre&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; article 10) :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;conception des enseignements ;&lt;/li&gt;&lt;li&gt;déroulement des enseignements ;&lt;/li&gt;&lt;li&gt;évaluation des apprentissages ;&lt;/li&gt;&lt;li&gt;prestation individuelle ;&lt;/li&gt;&lt;li&gt;appréciation globale ;&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;dont le qualificatif est l&#39;un des suivants :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;particulièrement favorable ;&lt;/li&gt;&lt;li&gt;favorable ;&lt;/li&gt;&lt;li&gt;défavorable ;&lt;/li&gt;&lt;li&gt;sans objet.&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Le président de la commission est chargé de le remettre à la commission spéciale dont les compétences sont fixées dans l&#39;article 71 des statuts organiques.&lt;br/&gt;&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
