--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA98.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA98.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">31/07/2015 17:52:47</td>
+			<td class="ObjectDetailsValue">4/08/2015 09:20:17</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA91.htm">Consultation des évaluations</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Consulter le tableau de bord permet aux membres de la communauté universitaire d&#39;éccéder à des statistiques et des informations générales sur les enseignements, les enseignants et les résultats. Certaines informations sont uniquement accessibles aux commissions pédagogiques ou aux enseignants.&lt;br/&gt;&lt;br/&gt;Dans ce tableau de bord, il est possible de voir les données de chaque campagne et de les comparer entre elles.&lt;br/&gt;&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">Consulter le tableau de bord permet aux membres de la communauté universitaire d&#39;accéder à des statistiques et des informations générales sur les enseignements, les enseignants et les résultats. Certaines informations sont uniquement accessibles aux commissions pédagogiques ou aux enseignants.&lt;br/&gt;&lt;br/&gt;Dans ce tableau de bord, il est possible de voir les données de chaque campagne et de les comparer entre elles.&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
