--- a/doc_report/glossary.htm
+++ b/doc_report/glossary.htm
@@ -192,6 +192,33 @@ Pour les questionnaires relatifs aux unités d'enseignement, la section disposit
 	<li>Déroulement des enseignements : « <i>ensemble des activités réalisées en interaction avec les étudiants</i> ».</li>
 </ul></td>
 			</tr>			<tr valign="top">
+				<td width="16%" class="TableRow">qual-0002</td>
+				<td width="8%" class="TableRow">Qualificatif</td>
+				<td width="76%" class="TableRow">Réponse au questionnaire d'évaluation.
+&nbsp;
+<ul>
+	<li>--</li>
+	<li>-</li>
+	<li>+</li>
+	<li>++</li>
+	<li>sans objet</li>
+</ul>
+
+</td>
+			</tr>			<tr valign="top">
+				<td width="16%" class="TableRow">qual-0003</td>
+				<td width="8%" class="TableRow">Qualificatif</td>
+				<td width="76%" class="TableRow">Appréciation de la commission.
+
+Appréciation d'une entité pédagogique émise par la commission pédagogique.
+&nbsp;
+<ul>
+	<li>Particulièrement positive</li>
+	<li>Positive</li>
+	<li>Positive avec points d'attention</li>
+	<li>Problématique</li>
+</ul></td>
+			</tr>			<tr valign="top">
 				<td width="16%" class="TableRow">Questionnaire d'évaluation</td>
 				<td width="8%" class="TableRow">Vocabulary</td>
 				<td width="76%" class="TableRow">&nbsp;</td>
