--- a/doc_report/linkdocs/EAID_0E0BB220_01FE_45b4_BB84_C467EE0C70CC.htm
+++ b/doc_report/linkdocs/EAID_0E0BB220_01FE_45b4_BB84_C467EE0C70CC.htm
@@ -7,10 +7,9 @@
 </head>
 <body>
 <p><font face="Calibri" color="#4f81bc" size="4"><b>&#201;l&#233;ment d&#233;clencheur</b></font></p>
-<div align="left"><font face="SFRM1095"><br /></font></div><div align="left"><font face="SFRM1095"><br /></font></div><p><font face="Calibri" color="#4f81bc" size="4"><b>Planification</b></font></p>
-<div align="left"><font face="SFRM1095">Le superviseur peut r&#233;aliser de nouveaux questionnaires &#224; tout moment.</font></div>
-<div align="left"><font face="SFRM1095">La CoCoP&#233; d&#233;termine le questionnaire &#224; utiliser lors de la campagne suffisamment de 
-temps avant le d&#233;but de la p&#233;riode de prise d'avis.</font></div>
+<div align="left"><font face="SFRM1095">Volont&#233; de mise &#224; jour de la liste des objets.</font></div>
+<div align="left"><font face="SFRM1095"><br /></font></div><p><font face="Calibri" color="#4f81bc" size="4"><b>Planification</b></font></p>
+<div align="left"><font face="SFRM1095">N/A</font></div>
 <div align="left"><font face="SFRM1095"><br /></font></div><p><font face="Calibri" color="#4f81bc" size="4"><b>Donn&#233;es d'entr&#233;e</b></font></p>
 <table width="649" cellpadding="3" cellspacing="0" style="table-layout: fixed; border-collapse: collapse; border-width: 0px; border-color: #000000; ">
     <colgroup>
@@ -30,37 +29,47 @@ temps avant le d&#233;but de la p&#233;riode de prise d'avis.</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" height="17" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">Dimensions</font></div>
+    <div align="left"><font face="SFRM1095">Type d'objet</font></div>
     </td>
     <td align="left" valign="top" width="209" height="17" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">Base de donn&#233;es</font></div>
+    <div align="left"><font face="SFRM1095">Qualificatif</font></div>
     </td>
     <td align="left" valign="top" width="209" height="17" style="border: solid #000000 1px;">
     <div align="left"><font face="SFRM1095">&#201;valuation des enseignements</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">Banque de questionnaires</font></div>
+    <div align="left"><font face="SFRM1095">R&#232;gles</font></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">Base de donn&#233;es</font></div>
-    </td>
-    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">&#201;valuation des enseignements</font></div>
-    </td></tr>
-    <tr>
-    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
-    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
-    </td>
-    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
-    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
+    <div align="left"><font face="SFRM1095">R&#232;gle</font></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
     <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
+    <div align="left"><font face="SFRM1095">Param&#232;tres</font></div>
+    </td>
+    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
     <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
+    </td>
+    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
+    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
+    </td></tr>
+    <tr>
+    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
+    <div align="left"><font face="SFRM1095">Exceptions</font></div>
+    </td>
+    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
+    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
+    </td>
+    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
+    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
+    </td></tr>
+    <tr>
+    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
+    <div align="left"><font face="SFRM1095">P&#233;riode de validit&#233;</font></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
     <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
@@ -118,13 +127,14 @@ temps avant le d&#233;but de la p&#233;riode de prise d'avis.</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaire d'&#233;valuation</font></div>
+    <div align="left"><font face="SFRM1095">Liste des objets des 
+    questionnaires</font></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaire</font></div>
+    <div align="left"><font face="SFRM1095">Base de donn&#233;es</font></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Complet</font></div>
+    <div align="left"><font face="SFRM1095">Mise &#224; jour</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
@@ -193,70 +203,36 @@ temps avant le d&#233;but de la p&#233;riode de prise d'avis.</font></div>
     <div align="left"><font face="SFRM1095">Donn&#233;es de sortie</font></div>
     </td></tr>
     <tr>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">CoCoP&#233;</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">?</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <ul style="margin-top: 0mm; margin-bottom: 0mm; padding-left: 0; margin-left: 0; list-style-type: disc; ">
-    <li style="margin-left: 9pt; margin-right: 0pt; padding-left: 0pt; font-size: 11pt;  color: #010101;  "><font face="SFRM1095">Valide les 
-    questionnaires</font></div></li>
-    <li style="margin-left: 9pt; margin-right: 0pt; padding-left: 0pt; font-size: 11pt;  color: #010101;  "><font face="SFRM1095">D&#233;termine le 
-    questionnaire 
-    &#224; utiliser pour 
-    la campagne 
-    d'&#233;valuation</font></div></li>
-    </ul>
-    </td>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaires</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Statut du 
-    questionnaire 
-    (valid&#233;, rejet&#233;, 
-    associ&#233; &#224; une 
-    campagne)</font></div>
-    </td></tr>
-    <tr>
-    <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Traducteur</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Traducteur</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Traduit les 
-    questionnaires</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaire 
-    dans la langue 
-    originale</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaires 
-    traduits</font></div>
-    </td></tr>
-    <tr>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
+    <td align="left" valign="top" width="123" height="100" style="border: solid #010101 1px;">
     <div align="left"><font face="SFRM1095">Superviseur</font></div>
     </td>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Responsable 
+    <td align="left" valign="top" width="123" height="100" style="border: solid #010101 1px;">
+    <div align="left"><font face="SFRM1095">Gestionnaire des 
+    objets des 
     questionnaires</font></div>
     </td>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Pr&#233;pare les 
+    <td align="left" valign="top" width="123" height="100" style="border: solid #010101 1px;">
+    <div align="left"><font face="SFRM1095">Combine les 
+    donn&#233;es d'entr&#233;e 
+    en un nouvel objet 
+    dans la liste des 
+    objets des 
+    questionnaires.</font></div>
+    </td>
+    <td align="left" valign="top" width="123" height="100" style="border: solid #010101 1px;">
+    <ul style="margin-top: 0mm; margin-bottom: 0mm; padding-left: 0; margin-left: 0; list-style-type: disc; ">
+    <li style="margin-left: 9pt; margin-right: 0pt; padding-left: 0pt; font-size: 11pt;  color: #010101;  "><font face="SFRM1095">Type d'objet</font></div></li>
+    <li style="margin-left: 9pt; margin-right: 0pt; padding-left: 0pt; font-size: 11pt;  color: #010101;  "><font face="SFRM1095">R&#232;gles</font></div></li>
+    <li style="margin-left: 9pt; margin-right: 0pt; padding-left: 0pt; font-size: 11pt;  color: #010101;  "><font face="SFRM1095">Param&#232;tres</font></div></li>
+    <li style="margin-left: 9pt; margin-right: 0pt; padding-left: 0pt; font-size: 11pt;  color: #010101;  "><font face="SFRM1095">Exceptions</font></div></li>
+    <li style="margin-left: 9pt; margin-right: 0pt; padding-left: 0pt; font-size: 11pt;  color: #010101;  "><font face="SFRM1095">P&#233;riode de 
+    validit&#233;</font></div></li>
+    </ul>
+    </td>
+    <td align="left" valign="top" width="123" height="100" style="border: solid #010101 1px;">
+    <div align="left"><font face="SFRM1095">Liste des objets 
+    des 
     questionnaires</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">N/A</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaires</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="123" height="17" style="border: solid #010101 1px;">
