--- a/doc_report/linkdocs/EAID_AD4FB140_4705_4f0a_8B9C_01AAD35B6147.htm
+++ b/doc_report/linkdocs/EAID_AD4FB140_4705_4f0a_8B9C_01AAD35B6147.htm
@@ -7,10 +7,9 @@
 </head>
 <body>
 <p><font face="Calibri" color="#4f81bc" size="4"><b>&#201;l&#233;ment d&#233;clencheur</b></font></p>
-<div align="left"><font face="SFRM1095"><br /></font></div><div align="left"><font face="SFRM1095"><br /></font></div><p><font face="Calibri" color="#4f81bc" size="4"><b>Planification</b></font></p>
-<div align="left"><font face="SFRM1095">Le superviseur peut r&#233;aliser de nouveaux questionnaires &#224; tout moment.</font></div>
-<div align="left"><font face="SFRM1095">La CoCoP&#233; d&#233;termine le questionnaire &#224; utiliser lors de la campagne suffisamment de 
-temps avant le d&#233;but de la p&#233;riode de prise d'avis.</font></div>
+<div align="left"><font face="SFRM1095">Requ&#234;te de la part d'un utilisateur.</font></div>
+<div align="left"><font face="SFRM1095"><br /></font></div><p><font face="Calibri" color="#4f81bc" size="4"><b>Planification</b></font></p>
+<div align="left"><font face="SFRM1095">Le support doit &#234;tre disponible tant qu'au moins un utilisateur a acc&#232;s &#224; l'application.</font></div>
 <div align="left"><font face="SFRM1095"><br /></font></div><p><font face="Calibri" color="#4f81bc" size="4"><b>Donn&#233;es d'entr&#233;e</b></font></p>
 <table width="649" cellpadding="3" cellspacing="0" style="table-layout: fixed; border-collapse: collapse; border-width: 0px; border-color: #000000; ">
     <colgroup>
@@ -30,27 +29,27 @@ temps avant le d&#233;but de la p&#233;riode de prise d'avis.</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" height="17" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">Dimensions</font></div>
+    <div align="left"><font face="SFRM1095">Requ&#234;te utilisateur</font></div>
     </td>
     <td align="left" valign="top" width="209" height="17" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">Base de donn&#233;es</font></div>
+    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
     </td>
     <td align="left" valign="top" width="209" height="17" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">&#201;valuation des enseignements</font></div>
+    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">Banque de questionnaires</font></div>
+    <div align="left"><font face="SFRM1095">Type d'utilisateur</font></div>
     </td>
-    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">Base de donn&#233;es</font></div>
-    </td>
-    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">&#201;valuation des enseignements</font></div>
-    </td></tr>
-    <tr>
     <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
     <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
+    </td>
+    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
+    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
+    </td></tr>
+    <tr>
+    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
+    <div align="left"><font face="SFRM1095">Nom utilisateur</font></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
     <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
@@ -118,13 +117,13 @@ temps avant le d&#233;but de la p&#233;riode de prise d'avis.</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaire d'&#233;valuation</font></div>
+    <div align="left"><font face="SFRM1095">Solution</font></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaire</font></div>
+    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Complet</font></div>
+    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
@@ -193,70 +192,25 @@ temps avant le d&#233;but de la p&#233;riode de prise d'avis.</font></div>
     <div align="left"><font face="SFRM1095">Donn&#233;es de sortie</font></div>
     </td></tr>
     <tr>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">CoCoP&#233;</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">?</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <ul style="margin-top: 0mm; margin-bottom: 0mm; padding-left: 0; margin-left: 0; list-style-type: disc; ">
-    <li style="margin-left: 9pt; margin-right: 0pt; padding-left: 0pt; font-size: 11pt;  color: #010101;  "><font face="SFRM1095">Valide les 
-    questionnaires</font></div></li>
-    <li style="margin-left: 9pt; margin-right: 0pt; padding-left: 0pt; font-size: 11pt;  color: #010101;  "><font face="SFRM1095">D&#233;termine le 
-    questionnaire 
-    &#224; utiliser pour 
-    la campagne 
-    d'&#233;valuation</font></div></li>
-    </ul>
-    </td>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaires</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Statut du 
-    questionnaire 
-    (valid&#233;, rejet&#233;, 
-    associ&#233; &#224; une 
-    campagne)</font></div>
-    </td></tr>
-    <tr>
     <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Traducteur</font></div>
+    <div align="left"><font face="SFRM1095">Gestionnaire de 
+    support</font></div>
     </td>
     <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Traducteur</font></div>
+    <div align="left"><font face="SFRM1095">Gestionnaire de 
+    support</font></div>
     </td>
     <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Traduit les 
-    questionnaires</font></div>
+    <div align="left"><font face="SFRM1095">R&#233;pond aus 
+    requ&#234;tes des 
+    utilisateurs</font></div>
     </td>
     <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaire 
-    dans la langue 
-    originale</font></div>
+    <div align="left"><font face="SFRM1095">Requ&#234;te 
+    utilisateur</font></div>
     </td>
     <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaires 
-    traduits</font></div>
-    </td></tr>
-    <tr>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Superviseur</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Responsable 
-    questionnaires</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Pr&#233;pare les 
-    questionnaires</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">N/A</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaires</font></div>
+    <div align="left"><font face="SFRM1095">Solution</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="123" height="17" style="border: solid #010101 1px;">
