--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA68.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA68.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">28/07/2015 11:03:25</td>
+			<td class="ObjectDetailsValue">5/08/2015 10:14:05</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA65.htm">Administration</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Configurer l&#39;application consiste à ajuster certains paramètres de fonctionnement de l&#39;application.&lt;br/&gt;Le superviseur a ainsi la possibilité de gérer :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;La présentation de l&#39;application (nombre d&#39;éléments par liste par défaut, langue par défaut, etc.)&lt;/li&gt;&lt;li&gt;Les formules des calculs (&lt;a href=&quot;javascript:top.guidLink(&#39;{2B480A6F-8202-4b57-B62C-DF6A15D82E70}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer les formules des calculs&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;)&lt;/li&gt;&lt;li&gt;Les listes de qualificatifs (&lt;a href=&quot;javascript:top.guidLink(&#39;{4EC470FF-D8EE-4d21-BB27-7369683D3F7C}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer les listes de qualificatifs&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;)&lt;/li&gt;&lt;li&gt;Les droits d&#39;accès des différents groupes d&#39;utilisateurs (&lt;a href=&quot;javascript:top.guidLink(&#39;{B497FB1A-96EA-4631-8030-D6488398D9E5}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Attribuer les droits d&#39;accès&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;)&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;&lt;br/&gt;----&lt;br/&gt;Déterminer la campagne par défaut&lt;br/&gt;Suspendre l&#39;accès à l&#39;application&lt;br/&gt;Gérer les messages de l&#39;application ainsi que leur traduction.&lt;br/&gt;Gérer les contacts de l&#39;application (admin, support, ...)&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">Configurer l&#39;application consiste à ajuster certains paramètres de fonctionnement de l&#39;application.&lt;br/&gt;Le superviseur a ainsi la possibilité de gérer :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;La présentation de l&#39;application (nombre d&#39;éléments par liste par défaut, langue par défaut, etc.)&lt;/li&gt;&lt;li&gt;Les formules des calculs (&lt;a href=&quot;javascript:top.guidLink(&#39;{2B480A6F-8202-4b57-B62C-DF6A15D82E70}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer les formules des calculs&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;)&lt;/li&gt;&lt;li&gt;Les listes de qualificatifs (&lt;a href=&quot;javascript:top.guidLink(&#39;{4EC470FF-D8EE-4d21-BB27-7369683D3F7C}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer les listes de qualificatifs&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;)&lt;/li&gt;&lt;li&gt;Les droits d&#39;accès des différents groupes d&#39;utilisateurs (&lt;a href=&quot;javascript:top.guidLink(&#39;{B497FB1A-96EA-4631-8030-D6488398D9E5}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Attribuer les droits d&#39;accès&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;)&lt;/li&gt;&lt;li&gt;La campagne par défaut&lt;/li&gt;&lt;li&gt;La suspension de l&#39;application&lt;/li&gt;&lt;li&gt;Les messages de l&#39;application ainsi que leur traduction&lt;/li&gt;&lt;li&gt;les contacts de l&#39;application (administrateurs, support, etc.)&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
