--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA84.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA84.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">28/07/2015 14:19:33</td>
+			<td class="ObjectDetailsValue">5/08/2015 15:44:22</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA65.htm">Administration</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Gérer la liste des qualificatifs consiste à maintenir à jour les différentes mentions, indicateurs et autres qualificatifs possibles.&lt;br/&gt;&lt;br/&gt;Les qualificatifs suivants nécessitent une gestion :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Mention du taux d&#39;accord des réponses&lt;/li&gt;&lt;li&gt;Indicateur d&#39;évaluation de la dimension&lt;/li&gt;&lt;li&gt;Appréciation des évaluations&lt;/li&gt;&lt;li&gt;Réponses possibles aux questionnaires (échelle de Likert paire)&lt;/li&gt;&lt;li&gt;Options du filtre « indicateur dispositif »&lt;/li&gt;&lt;li&gt;Options du filtre « avis rendu »&lt;/li&gt;&lt;li&gt;Options du filtre « avis rendu dispositif »&lt;/li&gt;&lt;li&gt;Options du filtre « avis rendu enseignant »&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;La liste des activités d&#39;apprentissage est aussi gérée par le superviseur. Cette dernière est définie par le conseil académique (voir &lt;a href=&quot;javascript:top.guidLink(&#39;{C6EB0DEF-6C55-4cc6-891F-EEE7D931DAAA}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Liste des activités d&#39;apprentissage&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;).&lt;br/&gt;&lt;br/&gt;Le superviseur est aussi responsable du style associé à chaque qualificatif.&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;-----&lt;br/&gt;Gestion de toutes les listes de l&#39;application&lt;br/&gt;#gt; Indicateurs (exhaustif)&lt;br/&gt;#gt; Mentions (exhaustif)&lt;br/&gt;#gt; Types de stat&lt;br/&gt;#gt; Types de message&lt;br/&gt;#gt; Réponses possibles aux questionnaires (exhaustif)&lt;br/&gt;#gt; Filtres&lt;br/&gt;#gt; etc.&lt;br/&gt;&lt;br/&gt;(On ne peut modifier un indicateur ayant fait partie d&#39;un calcul. Il faut en créer un nouveau avec une nouvelle formule. cf diagramme d&#39;activité)&lt;br/&gt;&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">La gestion des qualificatifs est le processus consistant à maintenir la liste des qualificatifs utilisés durant la campagne.&lt;br/&gt;&lt;br/&gt;Les qualificatifs suivants nécessitent une gestion :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Mention du taux d&#39;accord des réponses&lt;/li&gt;&lt;li&gt;Indicateur d&#39;évaluation de la dimension&lt;/li&gt;&lt;li&gt;Appréciation des évaluations (qual-0003)&lt;/li&gt;&lt;li&gt;Réponses possibles aux questionnaires (qual-0002)&lt;/li&gt;&lt;li&gt;Options du filtre « indicateur dispositif »&lt;/li&gt;&lt;li&gt;Options du filtre « avis rendu »&lt;/li&gt;&lt;li&gt;Options du filtre « avis rendu dispositif »&lt;/li&gt;&lt;li&gt;Options du filtre « avis rendu enseignant »&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;La liste des activités d&#39;apprentissage est aussi gérée par le superviseur. Cette dernière est définie par le conseil académique (voir &lt;a href=&quot;javascript:top.guidLink(&#39;{C6EB0DEF-6C55-4cc6-891F-EEE7D931DAAA}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Liste des activités d&#39;apprentissage&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;).&lt;br/&gt;&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
