--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA94.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA94.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">17/07/2015 13:47:03</td>
+			<td class="ObjectDetailsValue">4/08/2015 11:47:57</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="../EA3/EA101.htm">Enquête</a>, <a href="EA91.htm">Consultation des évaluations</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">La consultation par enseignant est une réalisation de « &lt;a href=&quot;javascript:top.guidLink(&#39;{6A294285-B80F-4599-BE63-3073599842B7}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Consulter la grille des résultats&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;br/&gt;Dans ce cas :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;L&#39;entité consultée est l&#39;enseignant&lt;/li&gt;&lt;li&gt;L&#39;identifiant est le matricule&lt;/li&gt;&lt;li&gt;L&#39;intitulé est le couple nom, prénom&lt;/li&gt;&lt;li&gt;Information additionnelle : titulaire ou non de chaque unité d&#39;enseignement associée&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Un filtre supplémentaire est disponible :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Titulaire ou non pour chaque UE associée&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">La consultation par enseignant est un processus permettant de consulter la grille des résultats groupés par enseignant.&lt;br/&gt;&lt;br/&gt;Dans ce cas :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;L&#39;entité consultée est l&#39;enseignant&lt;/li&gt;&lt;li&gt;L&#39;identifiant est le matricule&lt;/li&gt;&lt;li&gt;L&#39;intitulé est le couple nom, prénom&lt;/li&gt;&lt;li&gt;Information additionnelle : titulaire ou non de chaque unité d&#39;enseignement associée&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Un filtre supplémentaire est disponible :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Titulaire ou non pour chaque UE associée&lt;/li&gt;&lt;/ul&gt;&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
