--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA95.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA95.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">17/07/2015 13:24:34</td>
+			<td class="ObjectDetailsValue">4/08/2015 11:47:05</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="../EA3/EA101.htm">Enquête</a>, <a href="EA91.htm">Consultation des évaluations</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">La consultation par unités d&#39;enseignement est une réalisation de « &lt;a href=&quot;javascript:top.guidLink(&#39;{6A294285-B80F-4599-BE63-3073599842B7}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Consulter la grille des résultats&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;br/&gt;Dans ce cas :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;L&#39;entité consultée est l&#39;unité d&#39;enseignement&lt;/li&gt;&lt;li&gt;L&#39;identifiant est le NRE&lt;/li&gt;&lt;li&gt;Information additionnelle : mnémonique&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">La consultation par unités d&#39;enseignement est un processus permettant de consulter la grille des résultats groupés par UE.&lt;br/&gt;&lt;br/&gt;Dans ce cas :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;L&#39;entité consultée est l&#39;unité d&#39;enseignement&lt;/li&gt;&lt;li&gt;L&#39;identifiant est le NRE&lt;/li&gt;&lt;li&gt;Information additionnelle : mnémonique&lt;/li&gt;&lt;/ul&gt;&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
