--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA3/EA107.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA3/EA107.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">31/07/2015 14:31:58</td>
+			<td class="ObjectDetailsValue">4/08/2015 13:54:37</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA101.htm">Enquête</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">La délibération consiste à :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Valider les avis périodique attribués lors du dépouillement.&lt;/li&gt;&lt;li&gt;Délibérer les autre cas. Pour ce faire, la commission s&#39;appuie sur les éventuelles informations adjointes lors du dépouillement.&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Elle se déroule en assemblée plénière de la commission pédagogique facultaire.&lt;br/&gt;&lt;br/&gt;Les cas potentiellement « problématiques » au sens de l&#39;échelle d&#39;appréciation sont systématiquement évalués lors de la délibération, puisqu&#39;ils ne sont pas triviaux. Le processus décrivant leur traitement est décrit dans « &lt;a href=&quot;javascript:top.guidLink(&#39;{1AF2652A-F7D2-498e-B33E-61D662CEF39E}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer les évaluations défavorables&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;br/&gt;&lt;br/&gt;--&lt;br/&gt;&lt;br/&gt;À l&#39;issue de la délibération, le président de la commission pédagogique verrouille le traitement des résultats. Le superviseur en est notifié et ouvre alors la consultation des résultats aux enseignants.&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">La délibération consiste à :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Valider les avis périodique attribués lors du dépouillement.&lt;/li&gt;&lt;li&gt;Délibérer les autre cas. Pour ce faire, la commission s&#39;appuie sur les éventuelles informations adjointes lors du dépouillement.&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Elle se déroule en assemblée plénière de la commission pédagogique facultaire.&lt;br/&gt;&lt;br/&gt;Les cas potentiellement « problématiques » au sens de l&#39;échelle d&#39;appréciation sont systématiquement évalués lors de la délibération, puisqu&#39;ils ne sont pas triviaux. Le processus décrivant leur traitement est décrit dans « &lt;a href=&quot;javascript:top.guidLink(&#39;{1AF2652A-F7D2-498e-B33E-61D662CEF39E}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer les évaluations défavorables&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;br/&gt;&lt;br/&gt;À l&#39;issue de la délibération, le président de la commission pédagogique verrouille le traitement des résultats. Le superviseur en est notifié et ouvre alors la consultation des résultats aux enseignants.&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
