--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA4/EA124.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA4/EA124.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">28/07/2015 09:57:14</td>
+			<td class="ObjectDetailsValue">5/08/2015 16:54:57</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,11 +94,16 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA112.htm">Gestion de campagnes</a></td>
 		</tr>
 	</table>
-	
+	<div class="ObjectDetailsNotes">Gérer le support aux utilisateurs est le processus par lequel le gestionnaire de support réceptionne les requêtes des utilisateurs et les traite.&lt;br/&gt;&lt;br/&gt;Avant de pouvoir contacter le service de support, l&#39;application propose à l&#39;utilisateur un ensemble de réponses à des problèmes fréquemment rencontrés. Si aucune solution ne lui convient, il peut alors contacter le service de support. Le gestionnaire reçoit alors son message et traite la requête.&lt;br/&gt;Les informations suivantes sont jointes au message :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Type d&#39;utilisateur&lt;/li&gt;&lt;li&gt;Nom et éventuellement netid/matricule de l&#39;utilisateur&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;&lt;p/&gt;</div>
+
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
+			<li onClick="parent.toggleItem('LinkedDocument');" id="LinkedDocumentTitle">Linked Document</li>
 			<li onClick="parent.toggleItem('AssociationsFrom');" id="AssociationsFromTitle">Associations From</li>
 		</ul>
+		<div class="ItemBody" id="LinkedDocumentTable">
+			<iframe src="../../../../../../linkdocs/EAID_AD4FB140_4705_4f0a_8B9C_01AAD35B6147.htm" frameborder="0" id="linkDocIFrame"></iframe>
+		</div>
 		<div class="ItemBody" id="AssociationsFromTable">
 			<table border="0" cellspacing="0" cellpadding="0" class="Table">
 				<tr>
