--- a/doc_report/linkdocs/EAID_CCCF4FFC_9D7E_4b8f_9DF0_B48A0AEB7228.htm
+++ b/doc_report/linkdocs/EAID_CCCF4FFC_9D7E_4b8f_9DF0_B48A0AEB7228.htm
@@ -7,10 +7,9 @@
 </head>
 <body>
 <p><font face="Calibri" color="#4f81bc" size="4"><b>&#201;l&#233;ment d&#233;clencheur</b></font></p>
-<div align="left"><font face="SFRM1095"><br /></font></div><div align="left"><font face="SFRM1095"><br /></font></div><p><font face="Calibri" color="#4f81bc" size="4"><b>Planification</b></font></p>
-<div align="left"><font face="SFRM1095">Le superviseur peut r&#233;aliser de nouveaux questionnaires &#224; tout moment.</font></div>
-<div align="left"><font face="SFRM1095">La CoCoP&#233; d&#233;termine le questionnaire &#224; utiliser lors de la campagne suffisamment de 
-temps avant le d&#233;but de la p&#233;riode de prise d'avis.</font></div>
+<div align="left"><font face="SFRM1095">Volont&#233; de cr&#233;er un nouveau mod&#232;le de texte.</font></div>
+<div align="left"><font face="SFRM1095"><br /></font></div><p><font face="Calibri" color="#4f81bc" size="4"><b>Planification</b></font></p>
+<div align="left"><font face="SFRM1095">N/A</font></div>
 <div align="left"><font face="SFRM1095"><br /></font></div><p><font face="Calibri" color="#4f81bc" size="4"><b>Donn&#233;es d'entr&#233;e</b></font></p>
 <table width="649" cellpadding="3" cellspacing="0" style="table-layout: fixed; border-collapse: collapse; border-width: 0px; border-color: #000000; ">
     <colgroup>
@@ -19,18 +18,18 @@ temps avant le d&#233;but de la p&#233;riode de prise d'avis.</font></div>
         <col width="216"></col>
     </colgroup>
     <tr>
-    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
+    <td align="left" valign="top" width="209" height="17" style="border: solid #000000 1px;">
     <div align="left"><font face="SFRM1095">Donn&#233;es</font></div>
     </td>
-    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
+    <td align="left" valign="top" width="209" height="17" style="border: solid #000000 1px;">
     <div align="left"><font face="SFRM1095">Type</font></div>
     </td>
-    <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
+    <td align="left" valign="top" width="209" height="17" style="border: solid #000000 1px;">
     <div align="left"><font face="SFRM1095">Source</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" height="17" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">Dimensions</font></div>
+    <div align="left"><font face="SFRM1095">Banque des mod&#232;les de texte</font></div>
     </td>
     <td align="left" valign="top" width="209" height="17" style="border: solid #000000 1px;">
     <div align="left"><font face="SFRM1095">Base de donn&#233;es</font></div>
@@ -40,13 +39,13 @@ temps avant le d&#233;but de la p&#233;riode de prise d'avis.</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">Banque de questionnaires</font></div>
+    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">Base de donn&#233;es</font></div>
+    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
-    <div align="left"><font face="SFRM1095">&#201;valuation des enseignements</font></div>
+    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" style="border: solid #000000 1px;">
@@ -118,23 +117,23 @@ temps avant le d&#233;but de la p&#233;riode de prise d'avis.</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaire d'&#233;valuation</font></div>
+    <div align="left"><font face="SFRM1095">Banque des mod&#232;les de texte</font></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaire</font></div>
+    <div align="left"><font face="SFRM1095">Base de donn&#233;es</font></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Complet</font></div>
+    <div align="left"><font face="SFRM1095">Mise &#224; jour</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
+    <div align="left"><font face="SFRM1095">Texte traduit</font></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
+    <div align="left"><font face="SFRM1095">Texte</font></div>
     </td>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;">&nbsp;</span></div>
+    <div align="left"><font face="SFRM1095">Complet</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="209" style="border: solid #010101 1px;">
@@ -193,70 +192,43 @@ temps avant le d&#233;but de la p&#233;riode de prise d'avis.</font></div>
     <div align="left"><font face="SFRM1095">Donn&#233;es de sortie</font></div>
     </td></tr>
     <tr>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">CoCoP&#233;</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">?</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <ul style="margin-top: 0mm; margin-bottom: 0mm; padding-left: 0; margin-left: 0; list-style-type: disc; ">
-    <li style="margin-left: 9pt; margin-right: 0pt; padding-left: 0pt; font-size: 11pt;  color: #010101;  "><font face="SFRM1095">Valide les 
-    questionnaires</font></div></li>
-    <li style="margin-left: 9pt; margin-right: 0pt; padding-left: 0pt; font-size: 11pt;  color: #010101;  "><font face="SFRM1095">D&#233;termine le 
-    questionnaire 
-    &#224; utiliser pour 
-    la campagne 
-    d'&#233;valuation</font></div></li>
-    </ul>
-    </td>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaires</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="117" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Statut du 
-    questionnaire 
-    (valid&#233;, rejet&#233;, 
-    associ&#233; &#224; une 
-    campagne)</font></div>
-    </td></tr>
-    <tr>
     <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Traducteur</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Traducteur</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Traduit les 
-    questionnaires</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaire 
-    dans la langue 
-    originale</font></div>
-    </td>
-    <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaires 
-    traduits</font></div>
-    </td></tr>
-    <tr>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
     <div align="left"><font face="SFRM1095">Superviseur</font></div>
     </td>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Responsable 
-    questionnaires</font></div>
+    <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
+    <div align="left"><font face="SFRM1095">Gestionnaire des 
+    mod&#232;les de texte</font></div>
     </td>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Pr&#233;pare les 
-    questionnaires</font></div>
+    <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
+    <div align="left"><font face="SFRM1095">Cr&#233;e et met &#224; jour 
+    les mod&#232;les de 
+    texte.</font></div>
     </td>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">N/A</font></div>
+    <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
+    <div align="left"><font face="SFRM1095">Banque de 
+    mod&#232;les de textes</font></div>
     </td>
-    <td align="left" valign="top" width="123" height="34" style="border: solid #010101 1px;">
-    <div align="left"><font face="SFRM1095">Questionnaires</font></div>
+    <td align="left" valign="top" width="123" height="50" style="border: solid #010101 1px;">
+    <div align="left"><font face="SFRM1095">Mod&#232;le de texte</font></div>
+    </td></tr>
+    <tr>
+    <td align="left" valign="top" width="123" height="67" style="border: solid #010101 1px;">
+    <div align="left"><font face="SFRM1095">Traducteur</font></div>
+    </td>
+    <td align="left" valign="top" width="123" height="67" style="border: solid #010101 1px;">
+    <div align="left"><font face="SFRM1095">Traducteur</font></div>
+    </td>
+    <td align="left" valign="top" width="123" height="67" style="border: solid #010101 1px;">
+    <div align="left"><font face="SFRM1095">Traduction des 
+    textes &#224; la 
+    demande du 
+    superviseur.</font></div>
+    </td>
+    <td align="left" valign="top" width="123" height="67" style="border: solid #010101 1px;">
+    <div align="left"><font face="SFRM1095">Texte du mod&#232;le</font></div>
+    </td>
+    <td align="left" valign="top" width="123" height="67" style="border: solid #010101 1px;">
+    <div align="left"><font face="SFRM1095">Texte traduit</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="123" height="17" style="border: solid #010101 1px;">
